HTML, CSS updates

--- a/index.html
+++ b/index.html
@@ -4,29 +4,85 @@
     <title>Sarah Grace Black Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
+      href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
       rel="stylesheet"
-      type="text/css"
-      href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
     <main role="main">
-      <header role="banner">
-        <h1>Headline</h1>
-        <h2>Bio</h2>
+      <header role="banner" class="pinkBg">
+        <img src="img/sgb.png" alt="sgb" />
+        <h2>
+          My name is Sarah Grace Black
+          <br />
+          I am graphic designer and web developer
+          <br />
+          Welcome to my portfolio
+        </h2>
       </header>
 
-      <section>
-        My Work
+      <section class="work">
+        <div class="container">
+          <h2>My Work</h2>
+          <img src="img/quizapp.jpg" alt="sgb" />
+          <p>PROJECT: Leadership Quiz</p>
+          <p>TECHNOLOGIES USED:</p>
+          <p>
+            Find out if you have what it takes to be a leader by taking this
+            quiz. If you get a question wrong, the correct answer will be
+            displayed and at the end of the quiz you'll be able to see what your
+            final score was.
+          </p>
+          <a href="#" class="btn">VIEW PROJECT</a>
+          <a href="#" class="btn">VIEW CODE</a>
+        </div>
       </section>
-
-      <section>
-        About me
+      <!--
+      <section class="pinkBg about">
+        <div class="container">
+          <h2>About Me</h2>
+          <img src="img/pic.jpg" alt="profile pic" />
+          <p>
+            I love what I do because it allows me to use both sides of my brain
+            to create beautiful and functional projects. I bring my passion for
+            clean design and efficient code to every project and team I work
+            with.
+          </p>
+          <p>
+            Outside of design and code, I enjoy the usual creative-type pursuits
+            including art, books, film, travel and food.
+          </p>
+        </div>
       </section>
+-->
     </main>
+
     <footer role="content-info">
-      Footer
+      <section>
+        <h2>Contact</h2>
+        <div class="social">
+          <a href="https://github.com/sarahgraceblack" target="_blank"
+            ><span class="fab fa-github"></span
+          ></a>
+          <a href="https://www.linkedin.com/in/sarahgraceblack/" target="_blank"
+            ><span class="fab fa-linkedin-in"></span
+          ></a>
+          <a href="mailto:sarahgraceblack@gmail.com"
+            ><span class="fas fa-envelope"></span
+          ></a>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
