--- a/index.html
+++ b/index.html
@@ -22,33 +22,51 @@
   <body>
     <main role="main">
       <header role="banner" class="pinkBg">
-        <img src="img/sgb.png" alt="sgb" />
-        <h2>
-          My name is Sarah Grace Black
-          <br />
-          I am graphic designer and web developer
-          <br />
-          Welcome to my portfolio
-        </h2>
+        <div class="container">
+          <img src="img/sgb.png" alt="sgb" />
+          <h2>
+            My name is Sarah Grace Black
+            <br />
+            I am graphic designer and web developer
+            <br />
+            Welcome to my portfolio
+          </h2>
+        </div>
       </header>
 
       <section class="work">
         <div class="container">
           <h2>My Work</h2>
           <img src="img/quizapp.jpg" alt="sgb" />
-          <p>PROJECT: Leadership Quiz</p>
-          <p>TECHNOLOGIES USED:</p>
+          <p class="subheader">LEADERSHIP QUIZ</p>
+          <p>Technologies Used:</p>
+          <p>
+            <span class="fab fa-html5"></span>
+            <span class="fab fa-css3-alt"></span>
+            <span class="fab fa-js-square"></span>
+          </p>
+
           <p>
             Find out if you have what it takes to be a leader by taking this
             quiz. If you get a question wrong, the correct answer will be
             displayed and at the end of the quiz you'll be able to see what your
             final score was.
           </p>
-          <a href="#" class="btn">VIEW PROJECT</a>
-          <a href="#" class="btn">VIEW CODE</a>
+          <a
+            href="https://sarahgraceblack.github.io/quiz-app/"
+            target="_blank"
+            class="btn"
+            >VIEW PROJECT</a
+          >
+          <a
+            href="https://github.com/sarahgraceblack/quiz-app"
+            target="_blank"
+            class="btn"
+            >VIEW CODE</a
+          >
         </div>
       </section>
-      <!--
+
       <section class="pinkBg about">
         <div class="container">
           <h2>About Me</h2>
@@ -65,7 +83,6 @@
           </p>
         </div>
       </section>
--->
     </main>
 
     <footer role="content-info">
