--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
         <div class="container">
           <img src="img/sgb.png" alt="sgb" />
           <h2>
-            My name is Sarah Grace Black
-            <br />
-            I am graphic designer and web developer
-            <br />
-            Welcome to my portfolio
+            My name is Sarah Grace Black, I am graphic designer and web
+            developer. Welcome to my portfolio.
           </h2>
         </div>
       </header>
